# test_thrust

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main_hello.cpp
